# openmcx

./: CMakeLists.txt  CONTRIBUTORS.md  NOTICE.md  Readme.md  build.bat  build_with_dcp.bat  run_tests.py
.devcontainer/: Dockerfile
cmake/: sspschemafiles.cmake
cmake/fmi-library/: CMakeLists.txt
dcp/: CMakeLists.txt
dcp/cosine/: Main.cpp  Slave.hpp
docker/: Dockerfile
examples/dcp_fmu/: model.ssd
fmus/gain/: CMakeLists.txt
fmus/sinusGenerator/: CMakeLists.txt
fmus/vectorSum/: CMakeLists.txt
libs/: CMakeLists.txt
libs/channel_value/: CMakeLists.txt
libs/channel_value/include/channel_value/: ChannelDimension.h  ChannelValue.h
libs/channel_value/src/: ChannelDimension.c  ChannelValue.c
libs/common/: CMakeLists.txt
libs/common/include/common/: definitions.h
libs/util/: CMakeLists.txt
libs/util/include/util/: os.h  paths.h  stdlib.h  string.h
libs/util/src/common/: intconv.c  os.c  paths.c  stdlib.c  string.c
libs/util/src/linux/: os.c  paths.c  stdlib.c
libs/util/src/win/: libs.c  os.c  paths.c  stdlib.c
mcx/: mcx.c
scripts/SSP/: Ports.xsd
scripts/SSP/components/: Dcp.xsd
src/: CMakeLists.txt  CentralParts.h
src/components/: ComponentFactory.c  ComponentTypes.c  ComponentTypes.h  comp_constant.c  comp_constant.h  comp_dcp.cpp  comp_dcp.h  comp_fmu.c  comp_integrator.c  comp_vector_integrator.c
src/core/: Component.c  Component.h  Component_impl.h  Config.c  Config.h  Conversion.c  Conversion.h  Databus.c  Databus.h  Databus_impl.h  Dependency.h  Interpolation.c  Interpolation.h  Model.c  Model.h  SubModel.c  SubModel.h  Task.c
src/core/channels/: Channel.c  Channel.h  ChannelDimension.c  ChannelDimension.h  ChannelInfo.c  ChannelInfo.h  ChannelValue.c  ChannelValue.h  ChannelValueReference.c  ChannelValueReference.h  Channel_impl.h  ConnectionStatus.c  ConnectionStatus.h  VectorChannelInfo.c  VectorChannelInfo.h
src/core/connections/: Connection.c  Connection.h  ConnectionInfo.c  ConnectionInfo.h  ConnectionInfoFactory.c  ConnectionInfoFactory.h  ConnectionInfo_impl.h  Connection_impl.h  FilteredConnection.c  FilteredConnection.h  FilteredConnection_impl.h
src/core/connections/filters/: DiscreteFilter.c  DiscreteFilter.h  ExtFilter.c  Filter.c  Filter.h  IntExtFilter.c  IntExtFilter.h  IntFilter.c  IntFilter.h  MemoryFilter.c  MemoryFilter.h
src/core/parameters/: ParameterProxies.c  ParameterProxies.h
src/dcp/: master.cpp  master.hpp  slave.cpp  slave.hpp
src/fmu/: Fmu1Value.c  Fmu1Value.h  Fmu2Value.c  Fmu2Value.h  common_fmu.c  common_fmu1.c  common_fmu1.h  common_fmu2.c  common_fmu2.h
src/objects/: ObjectContainer.c  ObjectContainer.h  Vector.c  Vector.h
src/reader/: EnumMapping.c
src/reader/config/: ConfigInput.h  DcpConfigInput.c  DcpConfigInput.h
src/reader/core/: InputElement.h
src/reader/model/components/: ComponentInput.h
src/reader/model/components/specific_data/: ConstantInput.c  ConstantInput.h  DcpInput.c  DcpInput.h  IntegratorInput.h
src/reader/model/connections/: EndpointInput.h
src/reader/model/parameters/: ArrayParameterDimensionInput.h  ArrayParameterInput.c  ArrayParameterInput.h  ScalarParameterInput.c  ScalarParameterInput.h
src/reader/model/ports/: PortsInput.c  ScalarPortInput.c  ScalarPortInput.h  VectorPortInput.c  VectorPortInput.h
src/reader/ssp/: Components.c  Config.c  Connections.c  Parameters.c  Parameters.h  Ports.c  Results.c  Schema.c  SpecificData.c  SpecificData.h  Task.c  Units.c  Util.c  Util.h
src/steptypes/: StepType.c  StepType.h  StepTypeParallelMT.c  StepTypeParallelMT.h  StepTypeSequential.c
src/storage/: ChannelStorage.c  ChannelStorage.h  ComponentStorage.c  ComponentStorage.h  PPD.c  ResultsStorage.c  ResultsStorage.h  StorageBackendCsv.c  StorageBackendText.c
src/util/: compare.h  intconv.h  signals.h  stdlib.h  time.h
src/util/common/: compare.c  stdlib.c  time.c
src/util/linux/: signals.c  time.c
src/util/win/: signals.c  time.c
